# rag_chatbot

./: .gitignore  =0.8.3  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
core/chatbot/: assistant.py  instruction.py
core/db_tools/: describe_table.py  execute_query.py  list_table.py  query_sample.py
data/: create_table.py  data_preproccing.py  import _data.py  import_data.py  import_db.py  laptop_all.xlsx  laptop_all_clean.csv  test.py
db_tools/: describe_table.py  execute_query.py  list_table.py  query_sample.py
processing/: crawler_description.py  import_data.py  test.py
test/: test_chat.py  test_query.py
