[tool.poetry]
name = "rag-chatbot"
version = "0.1.0"
description = ""
authors = ["khanhphamj <phukhanh1903@gmail.com >"]
readme = "README.md"
packages = [{include = "rag_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
openpyxl = "^3.1.5"
google-generativeai = "^0.8.3"
load-dotenv = "^0.1.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"